Mon Jan 09 02:46:34 GMT 2006  Olly Betts <olly@survex.com>

	* Makefile.am,date.cc,omindex.cc,query.cc,scriptindex.cc,utils.cc,
	  utils.h: Use snprintf where available.

Sun Jan 08 22:41:47 GMT 2006  Olly Betts <olly@survex.com>

	* cdb_init.cc: Fixed malloc-based version to compile.

Sun Jan 08 21:05:46 GMT 2006  Olly Betts <olly@survex.com>

	* cdb_find.cc,cdb_hash.cc,cdb_unpack.cc: #include <config.h>.
	* configure.ac: Test for mmap.
	* cdb_init.cc: If mmap isn't found, and this isn't WIN32 fall back on
	  the very crude approach of loading the whole file into a malloc-ed
	  block.  For a small cdb file, that'll give acceptable performance
	  at least.

Fri Jan 06 21:29:37 GMT 2006  Olly Betts <olly@survex.com>

	* symboltab.h: Fix A after \xbf being interpereted as an overlong
	  escape sequence.

Fri Jan 06 21:26:57 GMT 2006  Olly Betts <olly@survex.com>

	* query.cc: Fix printf type mismatch on 64 bit platforms.

Fri Jan 06 21:00:34 GMT 2006  Olly Betts <olly@survex.com>

	* docs/omegascript.txt,query.cc: Added $find{LIST,STRING}.

Fri Jan 06 20:52:31 GMT 2006  Olly Betts <olly@survex.com>

	* symboltab.h: Write top-bit set characters using \xXX notation to
	  avoid warnings from Intel's C++ compiler.

Fri Jan 06 18:15:42 GMT 2006  Olly Betts <olly@survex.com>

	* query.cc: Removed unused variable.

Fri Jan 06 18:14:33 GMT 2006  Olly Betts <olly@survex.com>

	* query.cc: Cast time_t to unsigned long to avoid problems on 64bit
	  platforms.

Fri Jan 06 18:12:38 GMT 2006  Olly Betts <olly@survex.com>

	* docs/omegascript.txt: Note in the $cgi description that it returns
	  an arbitrary value if there's more than one, and pointing to
	  $cgilist.

Thu Jan 05 05:54:58 GMT 2006  Olly Betts <olly@survex.com>

	* cdb_init.cc: Fix mingw compilation.

Thu Jan 05 03:24:07 GMT 2006  Olly Betts <olly@survex.com>

	* cdb_init.cc: Fix to hopefully compile on Solaris which has a broken
	  sys/mman.h when used from C++.
